# eflowcode-image-mcp

./: .env.example  .gitignore  LICENSE  README.md  install.py  pyproject.toml  server.py
.github/workflows/: ci.yml
examples/: claude-desktop-config.json  codex-config.toml
